data/derived/fa15/progs/unify/prog1609.ml.out
Characters 86-103:
  | h::t -> (0, ((x+h) :: a))
            ^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c list
